--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,49 @@
-<div class="container">
-  <h1 class="mt-3 mb-3">Products</h1>
-  <app-product-list></app-product-list>
+<div class="page-wrapper">
+
+  <!-- MENU SIDEBAR -->
+  <aside class="menu-sidebar d-none d-lg-block">
+    <div class="logo">
+      <a href="home.html">
+        <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
+      </a>
+    </div>
+    <div class="menu-sidebar-content js-scrollbar1">
+      <nav class="navbar-sidebar">
+        <ul class="list-unstyled navbar-list">
+          <li>
+            <a href="#">Books</a>
+          </li>
+          <li>
+            <a href="#">Coffee Mugs</a>
+          </li>
+          <li>
+            <a href="#">Mouse Pads</a>
+          </li>
+          <li>
+            <a href="#">Luggage Tags</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </aside>
+  <!-- END MENU SIDEBAR-->
+
+  <!-- PAGE CONTAINER -->
+  <div class="page-container">
+    <!-- HEADER DESKTOP -->
+    <header class="header-desktop">
+      <div class="section-content section-content-p30">
+        <div class="container-fluid">
+          <div class="header-wrap">
+            <form class="form-header" onsubmit="return false;" method="GET">
+              <input class="au-input au-input-x1" type="text" name="search" placeholder="Search for data ..." />
+              <button class="au-btn-submit" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </header>
+  </div>
 </div>
