--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -12,7 +12,13 @@
                         <div class="price">{{ tempProduct.unitPrice | currency: 'USD' }}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
+
                 </div>
+
+                <!-- If products empty then display a message -->
+                 <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+                    No products found.
+                 </div>
             </div>
         </div>
     </div>
