--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -7,8 +7,16 @@
                 <div *ngFor="let tempProduct of products" class="col-md-3">
 
                     <div class="product-box">
-                        <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
-                        <h1>{{ tempProduct.name }}</h1>
+                        <a routerLink="/products/{{ tempProduct.id }}">
+                            <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
+                        </a>
+                        
+                        <h1>
+                            <a routerLink="/products/{{ tempProduct.id }}" class="product-details-link">
+                               {{ tempProduct.name }}
+                            </a>
+                        </h1>
+
                         <div class="price">{{ tempProduct.unitPrice | currency: 'USD' }}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
@@ -16,9 +24,9 @@
                 </div>
 
                 <!-- If products empty then display a message -->
-                 <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
                     No products found.
-                 </div>
+                </div>
             </div>
         </div>
     </div>
