--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -223,6 +223,15 @@
 
                 </div>
 
+                <!--- Order details -->
+                <div class="form-area">
+                    <h3>Review Your Order</h3>
+
+                    <p>Total Quantity: {{ totalQuantity }}</p>
+                    <p>Shipping: FREE</p>
+                    <p>Total Price: {{ totalPrice | currency: 'USD' }}</p>
+                </div>
+
                 <!-- Submit button -->
                 <div class="text-center">
                     <button type="submit" class="btn btn-info">Purchase</button>
