--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -83,6 +83,14 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+                               
+                                <div *ngIf="shippingAddressCountry.invalid && (shippingAddressCountry.dirty || shippingAddressCountry.touched)" class="alert alert-danger mt-1">
+                                    
+                                    <div *ngIf="shippingAddressCountry.errors.required">
+                                        Country is required
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -92,6 +100,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+
+                                <div *ngIf="shippingAddressStreet.invalid && (shippingAddressStreet.dirty || shippingAddressStreet.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="shippingAddressStreet.errors.required || shippingAddressStreet.errors.notOnlyWhitespace">
+                                        Street is required
+                                    </div>
+
+                                    <div *ngIf="shippingAddressStreet.errors.minlength">
+                                        Street must be at least 2 characters long
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -101,6 +121,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+
+                                <div *ngIf="shippingAddressCity.invalid && (shippingAddressCity.dirty || shippingAddressCity.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="shippingAddressCity.errors.required || shippingAddressCity.errors.notOnlyWhitespace">
+                                        City is required
+                                    </div>
+
+                                    <div *ngIf="shippingAddressCity.errors.minlength">
+                                        City must be at least 2 characters long
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -114,6 +146,14 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressState.invalid && (shippingAddressState.dirty || shippingAddressState.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="shippingAddressState.errors.required">
+                                        State is required
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -123,6 +163,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+
+                                <div *ngIf="shippingAddressZipCode.invalid && (shippingAddressZipCode.dirty || shippingAddressZipCode.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="shippingAddressZipCode.errors.required || shippingAddressZipCode.errors.notOnlyWhitespace">
+                                        Zip code is required
+                                    </div>
+
+                                    <div *ngIf="shippingAddressZipCode.errors.minlength">
+                                        Zip code must be at least 2 characters long
+                                    </div>
+
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -152,6 +205,15 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+                                
+                                <div *ngIf="billingAddressCountry.invalid && (billingAddressCountry.dirty || billingAddressCountry.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="billingAddressCountry.errors.required">
+                                        Country is required
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -161,6 +223,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+
+                                <div *ngIf="billingAddressStreet.invalid && (billingAddressStreet.dirty || billingAddressStreet.touched)" class="alert alert-danger mt-1">
+                                    
+                                    <div *ngIf="billingAddressStreet.errors.required || billingAddressStreet.errors.notOnlyWhitespace">
+                                        Street is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressStreet.errors.minlength">
+                                        Street must be at least 2 characters long
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -170,6 +245,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+
+                                <div *ngIf="billingAddressCity.invalid && (billingAddressCity.dirty || billingAddressCity.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="billingAddressCity.errors.required || billingAddressCity.errors.notOnlyWhitespace">
+                                        City is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressCity.errors.minlength">
+                                        City must be at least 2 characters long
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -183,6 +271,15 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressState.invalid && (billingAddressState.dirty || billingAddressState.touched)" class="alert alert-danger mt-1">
+                                    
+                                    <div *ngIf="billingAddressState.errors.required">
+                                        State is required
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -192,6 +289,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+
+                                <div *ngIf="billingAddressZipCode.invalid && (billingAddressZipCode.dirty || billingAddressZipCode.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="billingAddressZipCode.errors.required || billingAddressZipCode.errors.notOnlyWhitespace">
+                                        Zip code is required
+                                    </div>
+
+                                    <div *ngIf="billingAddressZipCode.errors.minlength">
+                                        Zip code must be at least 2 characters long
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -210,6 +320,15 @@
                                     <option>Visa</option>
                                     <option>Mastercard</option>
                                 </select>
+
+                                <div *ngIf="creditCardType.invalid && (creditCardType.dirty || creditCardType.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="creditCardType.errors.required">
+                                        Credit card type is required
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -219,6 +338,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
+
+                                <div *ngIf="creditCardNameOnCard.invalid && (creditCardNameOnCard.dirty || creditCardNameOnCard.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="creditCardNameOnCard.errors.required || creditCardNameOnCard.errors.notOnlyWhitespace">
+                                        Name is required
+                                    </div>
+
+                                    <div *ngIf="creditCardNameOnCard.errors.minlength">
+                                        Name must be at least 2 characters long
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -228,6 +360,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
+
+                                <div *ngIf="creditCardNumber.invalid && (creditCardNumber.dirty || creditCardNumber.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="creditCardNumber.errors.required">
+                                        Card number is required
+                                    </div>
+
+                                    <div *ngIf="creditCardNumber.errors.pattern">
+                                        Card number must be 16 digits long
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -237,6 +382,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
+
+                                <div *ngIf="creditCardSecurityCode.invalid && (creditCardSecurityCode.dirty || creditCardSecurityCode.touched)" class="alert alert-danger mt-1">
+
+                                    <div *ngIf="creditCardSecurityCode.errors.required">
+                                        Security code is required
+                                    </div>
+
+                                    <div *ngIf="creditCardSecurityCode.errors.pattern">
+                                        Security code must be 3 digits long
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
