--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="page-wrapper">
+<div class="page-wrapper"> <!-- READ!  -->
 
   <!-- MENU SIDEBAR -->
   <aside class="menu-sidebar d-none d-lg-block">
@@ -8,7 +8,7 @@
       </a>
     </div>
     
-    <app-product-category-menu></app-product-category-menu>
+    <app-product-category-menu></app-product-category-menu> <!-- ok -->
 
   </aside>
   <!-- END MENU SIDEBAR-->
@@ -21,9 +21,9 @@
         <div class="container-fluid">
           <div class="header-wrap">
             
-            <app-search></app-search>
+            <app-search></app-search> <!-- ok -->
             
-            <app-cart-status></app-cart-status>
+            <app-cart-status></app-cart-status> <!-- ok -->
           
           </div>
           <div class="account-wrap"></div>
