--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="main-content page-m">
+<div class="main-content page-m"> <!-- READ! -->
     <div class="section-content section-content-p30">
         <div class="container-fluid">
 
