--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,4 +1,4 @@
-<div class="detail-section">
+<div class="detail-section"> <!-- READ! -->
     <div class="container-fluid">
         
         <img src="{{ product.imageUrl }}" class="detail-img">
