--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,3 @@
-<p *ngFor="let tempProduct of products">
+<p *ngFor="let tempProduct of products"> <!-- READ! -->
     {{ tempProduct.name }}: {{ tempProduct.unitPrice | currency: 'USD' }}
 </p>
