--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<form class="form-header">
+<form class="form-header"> <!-- READ! -->
     
     <input #myInput type="text"
                     placeholder="Search for products ..." 
