--- a/src/app/components/cart-status/cart-status.component.html
+++ b/src/app/components/cart-status/cart-status.component.html
@@ -1,4 +1,4 @@
-<div class="cart-area d-n">
+<div class="cart-area d-n"> <!-- READ! -->
     <a routerLink="/cart-details">
         <div class="total">{{ totalPrice | currency: 'USD' }}
             <span>{{ totalQuantity }}</span> 
