--- a/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/src/app/components/product-category-menu/product-category-menu.component.html
@@ -1,4 +1,4 @@
-<div class="menu-sidebar-content js-scrollbar1">
+<div class="menu-sidebar-content js-scrollbar1"> <!-- READ! -->
     <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
             <li *ngFor="let tempProductCategory of productCategories">
