--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<div class="main-content"> <!-- READ! -->
     <div class="section-content section-content-p30">
         <div class="container-fluid">
             <div class="row">
