--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,8 @@
           <div class="header-wrap">
             
             <app-search></app-search> <!-- ok -->
+
+            <app-login-status></app-login-status>
             
             <app-cart-status></app-cart-status> <!-- ok -->
           
