--- a/src/app/components/login-status/login-status.component.html
+++ b/src/app/components/login-status/login-status.component.html
@@ -7,4 +7,7 @@
     <button *ngIf="!isAuthenticated" routerLink="/login" class="security-btn">Login</button>
 
     <button *ngIf="isAuthenticated" (click)="logout()" class="security-btn">Logout</button>
+
+    <button routerLink="/members" class="security-btn ml-1">Member</button>
+    
 </div>
