--- a/src/app/components/login-status/login-status.component.css
+++ b/src/app/components/login-status/login-status.component.css
@@ -7,6 +7,7 @@
     position: relative;
     right: 0;
     min-width:95px;
+    max-height: 47.5px;
     color:#fff;
     border: 10px solid #205b8d;
     -webkit-border-radius: 3px;
