--- a/src/app/components/login-status/login-status.component.html
+++ b/src/app/components/login-status/login-status.component.html
@@ -8,6 +8,6 @@
 
     <button *ngIf="isAuthenticated" (click)="logout()" class="security-btn">Logout</button>
 
-    <button routerLink="/members" class="security-btn ml-1">Member</button>
+    <button *ngIf="isAuthenticated" routerLink="/members" class="security-btn ms-1">Member</button>
     
 </div>
