--- a/src/app/components/login-status/login-status.component.html
+++ b/src/app/components/login-status/login-status.component.html
@@ -10,4 +10,6 @@
 
     <button *ngIf="isAuthenticated" routerLink="/members" class="security-btn ms-1">Member</button>
     
+    <button *ngIf="isAuthenticated" routerLink="/order-history" class="security-btn ms-1">Orders</button>
+
 </div>
